--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ vite.config.ts.*
 .env
 .env.local
 .env.*.local
+.env.development
+.env.production
 
 # Debug logs
 npm-debug.log*
@@ -29,6 +31,12 @@ yarn-error.log*
 .cache
 .temp
 .vite
+.replit
+replit.nix
 
 # Test coverage
 coverage
+
+# Replit specific
+.upm/
+.config/
